# pdf_extractor

./: .env.example  .gitignore  README.md  pyproject.toml
src/pdf_extractor/: __init__.py
src/pdf_extractor/application/: ingest_use_case.py  query_use_case.py
src/pdf_extractor/config/: settings.py
src/pdf_extractor/domain/: entities.py  interfaces.py
src/pdf_extractor/infrastructure/: chroma_store.py  observability.py  ollama_embedder.py  ollama_llm.py  openai_llm.py  pdf_loader.py  sentence_embedder.py  text_chunker.py
src/pdf_extractor/ui/: chainlit_app.py  cli.py
tests/: conftest.py
tests/integration/: test_chroma_store.py  test_ingest_query_flow.py
tests/unit/application/: test_ingest_use_case.py  test_query_use_case.py
tests/unit/domain/: test_entities.py
tests/unit/infrastructure/: test_observability.py  test_ollama_embedder.py  test_ollama_llm.py  test_pdf_loader.py  test_sentence_embedder.py  test_text_chunker.py
